--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
     </style>
 
     <style name="Theme.Splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowBackground">@color/blue_700</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_700</item>
+        <!--<item name="android:windowBackground">@color/blue_700</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_700</item>-->
     </style>
 </resources>
